added tooltip on mouseover, need to format data

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
 	<body>
 		<h1>Bar Chart Data Visualization</h1>
 		<div id='graph'></div>
-		<svg id="svgchart"></svg>
+		<div id='mainContainer'>
+			<svg id="svgchart"></svg>
+		</div>
 		<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 		<script src="https://d3js.org/d3.v4.min.js"></script>
 		<script type="text/javascript" src="js/graph.js"></script>
