added better labels and improved overall look

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,12 @@
 		<title>Visualize Data with a Bar Chart</title>
 	</head>
 	<body>
-		<h1>Bar Chart Data Visualization</h1>
-		<div id='graph'></div>
+		<h1>US Gross Domestic Product</h1>
 		<div id='mainContainer'>
 			<svg id="svgchart"></svg>
+		</div>
+		<div id="footer" class='col text-center'>
+			<p>created by <a href="https://www.linkedin.com/in/fabrizio-vitelli-0539aba4/" target="_blank">Fabrizio Vitelli</a></p>
 		</div>
 		<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 		<script src="https://d3js.org/d3.v4.min.js"></script>
